prevent stretched out selfie

--- a/_sass/components/header.sass
+++ b/_sass/components/header.sass
@@ -10,6 +10,7 @@
         height: 125px
         margin-bottom: 25px
         border-radius: 100%
+        object-fit: cover   // <-- keeps proportions, crops instead of stretching
         transition: all .2s
         opacity: 1
 
